--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.username: dbuser
-spring.datasource.password: {cipher}FKSAJDFGYOS8F7GLHAKERGFHLSAJ
+spring.datasource.password: {cipher}VIKASSRA
 
