Commiting the files

--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,2 @@
 spring.datasource.username: dbuser
-spring.datasource.password: {cipher}VIKASSRA
-
+spring.datasource.password: {cipher}FKSAJDFGYOS8F7GLHAKERGFHLSAJ
